--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=UrbanInfillApp@gmail.com
-MAIL_PASSWORD=Freedom0!
+MAIL_PASSWORD=Freedom01
 MAIL_ENCRYPTION=tls
 
 PUSHER_APP_ID=
