--- a/.env
+++ b/.env
@@ -26,8 +26,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=UrbanInfillApp@gmail.com
-MAIL_PASSWORD=Freedom01
+MAIL_USERNAME=noufalsiddiqui@gmail.com
+MAIL_PASSWORD=oliver_arrow1
 MAIL_ENCRYPTION=tls
 
 PUSHER_APP_ID=
