--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=development
 APP_KEY=base64:Es9s8apuR9iRFYj9LyWTtG8W6lY0gyGapWHni3DME5o=
 APP_DEBUG=true
 APP_URL=http://localhost
