--- a/.env
+++ b/.env
@@ -1,23 +1,20 @@
-APP_NAME=Laravel
 APP_ENV=development
-APP_KEY=base64:Es9s8apuR9iRFYj9LyWTtG8W6lY0gyGapWHni3DME5o=
-APP_DEBUG=true
+APP_KEY=base64:JVyGH0nvD/XhSSUufQ3mKE8PvSycEYUM5S8cb8v8Oi8=
+APP_DEBUG=false
+APP_LOG_LEVEL=debug
 APP_URL=http://localhost
-
-LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=forge
+DB_USERNAME=forge
+DB_PASSWORD=vK8A0HiAhLTPJhq3b3RA
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
-SESSION_LIFETIME=120
+QUEUE_DRIVER=sync
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
@@ -26,14 +23,11 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=noufalsiddiqui@gmail.com
-MAIL_PASSWORD=hahjbbmmelseteav
+MAIL_USERNAME=UrbanInfillApp@gmail.com
+MAIL_PASSWORD=qsqfahhlwhrddves
 MAIL_ENCRYPTION=tls
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
 
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+PUSHER_KEY=
+PUSHER_SECRET=
+PUSHER_APP_ID=
